@@ -4,6 +4,8 @@ import com.odysseusinc.arachne.execution_engine_common.api.v1.dto.AnalysisReques
 import com.odysseusinc.arachne.execution_engine_common.api.v1.dto.AnalysisRequestStatusDTO;
 import com.odysseusinc.arachne.execution_engine_common.api.v1.dto.DataSourceUnsecuredDTO;
 import com.odysseusinc.arachne.execution_engine_common.util.CommonFileUtils;
+import jakarta.annotation.PostConstruct;
+
 import java.nio.file.Path;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -43,14 +45,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.PostConstruct;
 import javax.net.ssl.HttpsURLConnection;
-import javax.transaction.Transactional;
-import javax.ws.rs.InternalServerErrorException;
-import javax.ws.rs.NotFoundException;
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.client.WebTarget;
-import javax.ws.rs.core.MediaType;
+import jakarta.transaction.Transactional;
+import jakarta.ws.rs.InternalServerErrorException;
+import jakarta.ws.rs.NotFoundException;
+import jakarta.ws.rs.client.Entity;
+import jakarta.ws.rs.client.WebTarget;
+import jakarta.ws.rs.core.MediaType;
 import java.io.*;
 import java.nio.file.Files;
 import java.security.KeyManagementException;
@@ -215,14 +216,14 @@ class ScriptExecutionServiceImpl extends AbstractDaoService implements ScriptExe
     @Override
     public ExecutionEngineAnalysisStatus createAnalysisExecution(Long jobId, Source source, String password, List<AnalysisFile> analysisFiles) {
 
-        ExecutionEngineGenerationEntity executionEngineGenerationEntity = executionEngineGenerationRepository.findOne(jobId);
+        ExecutionEngineGenerationEntity executionEngineGenerationEntity = executionEngineGenerationRepository.findById(jobId).get();
         ExecutionEngineAnalysisStatus execution = new ExecutionEngineAnalysisStatus();
         execution.setExecutionStatus(ExecutionEngineAnalysisStatus.Status.STARTED);
         execution.setExecutionEngineGeneration(executionEngineGenerationEntity);
         ExecutionEngineAnalysisStatus saved = analysisExecutionRepository.saveAndFlush(execution);
         if (Objects.nonNull(analysisFiles)) {
             analysisFiles.forEach(file -> file.setAnalysisExecution(saved));
-            inputFileRepository.save(analysisFiles);
+            inputFileRepository.saveAll(analysisFiles);
         }
         return saved;
     }
@@ -235,9 +236,9 @@ class ScriptExecutionServiceImpl extends AbstractDaoService implements ScriptExe
         if (execution.getExecutionContext().containsKey("engineExecutionId")) {
             Long execId = execution.getExecutionContext().getLong("engineExecutionId");
 
-            ExecutionEngineAnalysisStatus analysisExecution = analysisExecutionRepository.findOne(execId.intValue());
+            ExecutionEngineAnalysisStatus analysisExecution = analysisExecutionRepository.findById(execId.intValue()).get();
             if (analysisExecution == null) {
-                throw new NotFoundException(String.format("Execution with id=%d was not found", executionId));
+                throw new NotFoundException("Execution with id=%d was not found".formatted(executionId));
             }
             status = analysisExecution.getExecutionStatus().name();
         } else {
@@ -257,7 +258,7 @@ class ScriptExecutionServiceImpl extends AbstractDaoService implements ScriptExe
                 exec.setExecutionStatus(ExecutionEngineAnalysisStatus.Status.FAILED);
                 jobInvalidator.invalidateJobExecutionById(exec);
             });
-            analysisExecutionRepository.save(executions);
+            analysisExecutionRepository.saveAll(executions);
             return null;
         });
     }
